
[package]
name = "ruuvi-decoders"
version = "0.2.2"
edition = "2024"
rust-version = "1.90"
authors = ["Viljami Peltola"]
description = "Ruuvi BLE advertisement decoders for Data Formats v5, v6, and E1"
license = "MIT"
public = true
readme = "README.md"
repository = "https://github.com/viljami/ruuvi-decoders"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
hex = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
serde_json = "1.0"
rstest = "0.26.1"

[[example]]
name = "basic_usage"
required-features = []

[[example]]
name = "ble_scanner"
required-features = []

[[example]]
name = "error_handling"
required-features = []
